# fast_cocluster

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  DIMERGE_CO_IMPLEMENTATION_SUMMARY.md  LAPACK_SETUP.md  NEXT_STEPS.md  PERFORMANCE_REPORT.md  README.md  build.rs  plot.py  pyproject.toml  rust_run.sh  setup_lapack.sh  tarpaulin-report.html
.cargo/: README.md  config.toml.linux-conda-example  config.toml.linux-system-example  config.toml.macos-example
.claude/: settings.local.json
.serena/: project.yml
baselines/: README.md  coclust_shim.py  measure_memory.py  prepare_rcv1.py  prepare_rcv1_stratified.py  run_amazon_24cat.py  run_amazon_dimerge_fnmf.py  run_bcw_baselines.py  run_classic4_baselines.py  run_classic4_pnmtf_10seeds.py  run_dimerge_co_variants.py  run_dimerge_fnmf_small.py  run_rcv1_all.py  run_rcv1_all_dimerge.py  run_rcv1_baselines.py
benches/: README.md  classic4_benchmark.rs  dimerge_co_benchmarks.rs
docs/: benchmark_findings.md  coclusterer.puml  experiment_results.md  union_dc.puml
examples/: ablation_merge_strategy.rs  atomic_vs_modular.rs  bench_merge.rs  bench_merge_fast.rs  benchmark_all_timings.rs  benchmark_dimerco_advantage.rs  benchmark_dimerge_advantage.rs  benchmark_full_movielens.rs  check_fnmf.rs  check_nbvd.rs  check_onm3f.rs  check_onmtf.rs  check_pnmtf.rs  dimerge_co_demo.rs  dimerge_co_pipeline_demo.rs  evaluate_classic4.rs  evaluate_dimerge_atom.rs  evaluate_movielens.rs  evaluate_rcv1_all.rs  evaluate_rcv1_sweep.rs  evaluate_rcv1_test_full.rs  evaluate_rcv1_train_full.rs  modular_cocluster_example.rs  parameter_sweep.rs  run_rcv1.rs  run_single_baseline.rs  (+8 more)
src/: lib.rs  (+20 more)
(+83 files in other folders)
