[package]
name = "fast_cocluster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
ndarray = "0.15.6"
rayon = "1.8.0"
ndarray-parallel = "0.9.1"
nalgebra = "0.32.3"
kmeans = { path = "kmean-rs" }
rand = "0.8.5"
ndarray-rand = "0.14.0"
ndarray-npz = "0.1.0"
fern = "0.6"
chrono = "0.4"                 # For timestamps in logs
