[package]
name = "fast_cocluster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
rayon = "1.10.0"
ndarray-parallel = "0.9.1"
nalgebra = "0.33"
kmeans_smid = "0.3.0"
rand = "0.9"
ndarray-rand = "0.14.0"
ndarray-npz = "0.1.0"
log = "0.4.21"
chrono = "0.4.38"
simple_logger = "5.0.0"
ndarray-npy = "0.8.1"
ndarray-linalg = "0.16.0"
linfa = "0.7"
linfa-clustering = "0.7"
serde = { version = "1.0", features = ["derive"] }
statrs = "0.18"

[dev-dependencies]
env_logger = "0.11"
rand = "0.9"

[lib]
name = "fast_cocluster"
path = "src/lib.rs"
